# scpn-control

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .zenodo.json  ARCHITECTURE.md  CAPABILITIES_AND_USECASES.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  GEMINI_PHASE6_REPORT.md  GOVERNANCE.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  NOTICE.md  README.md  REUSE.toml  ROADMAP.md  SECURITY.md  SUPPORT.md  UNDERDEVELOPED_REGISTER.md  VALIDATION.md  _typos.toml  check_activated_features.py  iter_config.json  lake-manifest.json  lakefile.lean  mkdocs.yml  paper.bib  paper.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  (+1 more)
.devcontainer/: devcontainer.json
.githooks/: pre-push
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.streamlit/: config.toml
benches/: bench_fusion_snn_hook.py
benchmarks/: bench_aer_observation.py  bench_capacitor_bank_energy.py  bench_multi_shot_campaign.py  bench_pulsed_mpc_adapter.py  bench_runtime_admission.py  controller_latency.py  e2e_control_latency.py  regression_thresholds.toml  rl_vs_classical.json  rl_vs_classical.py
dashboard/: __init__.py  benchmark_state.py  control_dashboard.py  gk_state.py  phase_state.py  reference_shots.py  replay.py  scpn_studio.py  state.py  synthetic_shots.py  trajectory.py
docs/: REVIEWER_PAPER27_INTEGRATION.md  REVIEWER_PAPER27_INTEGRATION.tex  api.md  architecture.md  bench_interactive.vl.json  bench_lyapunov_vs_zeta.vl.json  bench_pac_vs_nopac.vl.json  benchmarks.md  capability_manifest.md  changelog.md  competitive_analysis.md  compute_validation_financing.md  deployment.md  development.md  faq.md  gyrokinetic_transport.md  index.md  joss_paper.md  mast_campaign_reconciliation.md  mast_dbdt_authority.md  mast_locked_mode_authority.md  mast_normalised_beta_authority.md  mast_saddle_modal_authority.md  mast_toroidal_field_authority.md  neural_transport_training.md  notebooks.md  onboarding.md  paper27_phase_dynamics.md  physics_methods.md  physics_traceability.md  pitch.md  pricing.md  production_readiness.md  release.md  release_notes_v0.19.2.md  release_notes_v0.19.3.md  release_notes_v0.20.0.md  release_notes_v0.20.1.md  release_notes_v0.20.2.md  release_notes_v0.20.3.md  (+14 more)
examples/: advanced_control_demo.ipynb  digital_twin_demo.py  frontier_physics_demo.ipynb  full_pipeline_benchmark.py  h_infinity_controller_demo.ipynb  neuro_symbolic_control_demo.ipynb  paper27_phase_dynamics_demo.ipynb  q10_breakeven_demo.ipynb  quickstart.py  scpn_full_stack_demo_2026.ipynb  snn_compiler_walkthrough.ipynb  snn_pac_closed_loop_demo.ipynb  streamlit_ws_client.py  tutorial_01_closed_loop_control.py  tutorial_02_jax_autodiff.py  tutorial_03_ppo_rl_agent.py  tutorial_04_neural_transport.py  tutorial_05_adaptive_phase_dynamics.py  tutorial_06_frontier_physics.py  tutorial_07_advanced_controllers.py  tutorial_08_gyrokinetic_solver.py
lean/: SCPNControl.lean
papers/: scpn_control.bib  scpn_control_preprint.tex
requirements/: ci-audit.txt  ci-build.in  ci-build.txt  ci-deps.in  ci-deps.txt  ci-docs.in  ci-docs.txt  ci-hdf5.txt  ci-interop.in  ci-interop.txt  ci-jax.txt  ci-lint.txt  ci-nengo.in  ci-nengo.txt  ci-notebook.in  ci-notebook.txt  ci-precommit.txt  ci-release.in  ci-release.txt  ci-security.in  ci-security.txt  ci-studio.in  ci-studio.txt  ci-test.in  ci-test.txt  ci-torch.in  ci-torch.txt  ci-viz.txt
scpn-control-rs/: Cargo.toml  deny.toml
scpn-control-rs/benches/: bench_boris.rs  bench_kuramoto.rs  bench_lif.rs  bench_transport.rs
scpn-control-rs/crates/control-control/: Cargo.toml
scpn-control-rs/crates/control-control/examples/: bench_capacitor_bank_energy.rs  bench_multi_shot_campaign.rs  bench_pulsed_mpc_adapter.rs
scpn-control-rs/crates/control-control/src/: analytic.rs  capacitor_bank.rs  digital_twin.rs  h_infinity.rs  lib.rs  mpc.rs  multi_shot_campaign.rs  optimal.rs  pid.rs  pulsed_scenario.rs  snn.rs  soc_learning.rs  spi.rs
scpn-control-rs/crates/control-control/tests/: multi_shot_campaign.rs  pulsed_mpc_adapter.rs
scpn-control-rs/crates/control-core/: Cargo.toml
scpn-control-rs/crates/control-core/src/: amr_kernel.rs  bfield.rs  bout_interface.rs  ignition.rs  inverse.rs  jacobian.rs  jit.rs  kernel.rs  lib.rs  memory_transport.rs  mpi_domain.rs  particles.rs  pedestal.rs  rf_heating.rs  source.rs  spike_buffer.rs  stability.rs  transport.rs  vacuum.rs  vmec_interface.rs  xpoint.rs
scpn-control-rs/crates/control-math/: Cargo.toml
scpn-control-rs/crates/control-math/src/: amr.rs  chebyshev.rs  elliptic.rs  fft.rs  gmres.rs  iga.rs  interp.rs  kuramoto.rs  lib.rs  linalg.rs  multigrid.rs  sor.rs  symplectic.rs  tridiag.rs
scpn-control-rs/crates/control-python/: Cargo.toml
scpn-control-rs/crates/control-python/src/: formal_worker.rs  lib.rs  slab.rs  spike_buffer.rs  transport_bridge.rs
scpn-control-rs/crates/control-types/: Cargo.toml
scpn-control-rs/crates/control-types/src/: config.rs  constants.rs  error.rs  lib.rs  state.rs
scpn-control-rs/fuzz/: Cargo.toml
scpn-control-rs/fuzz/fuzz_targets/: bout_stability.rs  capacitor_bank.rs  config_json.rs  kuramoto_kernel.rs  vmec_import.rs
scpn-control-rs/fuzz/seeds/: SHA256SUMS
scpn-control-rs/fuzz/seeds/bout_stability/: nominal.txt
scpn-control-rs/fuzz/seeds/config_json/: regression-grid-resolution-zero.json
scpn-control-rs/fuzz/seeds/vmec_import/: nominal.txt
scripts/: benchmark_native_formal_modes.py  benchmark_native_handoff.py  generate_itpa_reference.py  udp_fault_tolerance_benchmark.py
studio-web/: .npmrc  README.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  vitest.config.ts
tests/: conftest.py  iter_config_temp.json  mock_diiid.py  regression_config.json  test_acquire_mast_disruption_shots.py  test_adaptive_knm.py  test_adaptive_knm_diagnostics.py  test_advanced_soc.py  test_advanced_soc_verbose_plot.py  test_aer_observation.py  test_aer_observation_decode_strategies.py  test_aer_observation_internals.py  (+552 more)
(+781 files in other folders)
