# SPDX-License-Identifier: AGPL-3.0-or-later
# Commercial license available
# © Concepts 1996–2026 Miroslav Šotek. All rights reserved.
# © Code 2020–2026 Miroslav Šotek. All rights reserved.
# ORCID: 0009-0009-3560-0851
# Contact: www.anulum.li | protoscience@anulum.li
# SCPN Control — Python project metadata.
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scpn-control"
version = "0.21.0"
description = "SCPN Control — Neuro-symbolic Stochastic Petri Net controller for plasma control"
authors = [
    {name = "Miroslav Sotek", email = "protoscience@anulum.li"},
]
keywords = ["tokamak", "plasma-control", "petri-net", "snn", "Kuramoto", "MHD", "gyrokinetic", "H-infinity", "mu-synthesis", "NMPC"]
license = {text = "AGPL-3.0-or-later"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Physics",
]
readme = "README.md"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "osqp>=0.6",
    "click>=8.0",
    "pydantic>=2.0",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/anulum/scpn-control"
Documentation = "https://anulum.github.io/scpn-control/"
Repository = "https://github.com/anulum/scpn-control"
"Bug Tracker" = "https://github.com/anulum/scpn-control/issues"
Discussions = "https://github.com/anulum/scpn-control/discussions"
Changelog = "https://github.com/anulum/scpn-control/blob/main/CHANGELOG.md"

[project.optional-dependencies]
viz = ["matplotlib>=3.5"]
dashboard = ["streamlit>=1.20", "matplotlib>=3.5"]
hdf5 = ["h5py>=3.0"]
ws = ["websockets>=12.0"]
formal = ["z3-solver>=4.12"]
ml = ["torch>=2.0"]
facility = ["mdsthin>=1.6.3"]
jax = ["jax>=0.4.20", "jaxlib>=0.4.20"]
neuro = ["sc-neurocore>=3.8.0"]
nengo = []  # pure-numpy LIF+NEF engine, no external deps
loihi = []  # Loihi export deprecated; use export_fpga_weights()
rl = ["stable-baselines3>=2.0", "gymnasium>=0.29"]
benchmark = ["freegs>=0.6"]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "pymdown-extensions>=10.0",
]
precommit = ["pre-commit>=4.0"]
all = [
    "matplotlib>=3.5",
    "streamlit>=1.20",
    "h5py>=3.0",
    "websockets>=12.0",
    "torch>=2.0",
    "mdsthin>=1.6.3",
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "stable-baselines3>=2.0",
    "gymnasium>=0.29",
    "freegs>=0.6",
    "z3-solver>=4.12",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "bandit>=1.7",
    "matplotlib>=3.5",
    "streamlit>=1.20",
    "torch>=2.0",
    "pre-commit>=4.0",
    "z3-solver>=4.12",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
scpn-control = "scpn_control.cli:main"
scpn-check-generated-traceability = "tools.check_generated_traceability:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"scpn_control.scpn" = ["replay_schemas/*.json"]

[tool.mypy]
strict = false
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = [
    "src/scpn_control/",
]

# Per-module strict typing for the control/config boundary modules. The strict
# component flags are listed explicitly because mypy applies the `strict = true`
# meta-flag globally even inside a per-module override, silently enforcing strict
# checks across the whole package. Only flags mypy accepts per-module are listed
# (warn_redundant_casts and warn_unused_configs are global-only).
#
# Fully strict (including disallow_any_generics): these modules carry no bare
# numpy.ndarray or other unparametrised generics, so they enforce the full strict
# component set plus generic-argument enforcement. New modules join here as their
# strict debt is retired in the staged migration to global `strict = true`.
[[tool.mypy.overrides]]
module = [
    "scpn_control._typing",
    "scpn_control.core.current_drive",
    "scpn_control.core.momentum_transport",
    "scpn_control.core.integrated_transport_solver",
    "scpn_control.core.runtime_admission",
    "scpn_control.core.tokamak_config",
    "scpn_control.core.checkpoint",
    "scpn_control.scpn.observation",
    "scpn_control.scpn.geometry_neutral_replay",
    "scpn_control.control.realtime_efit",
    "scpn_control.control.volt_second_manager",
    "scpn_control.control.rzip_model",
    "scpn_control.control.rwm_feedback"
]
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
warn_unused_ignores = true
strict_equality = true
no_implicit_reexport = true
extra_checks = true

[[tool.mypy.overrides]]
module = ["matplotlib", "matplotlib.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["torch", "torch.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["scipy", "scipy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["validation", "validation.*"]
ignore_errors = true

[tool.pytest.ini_options]
pythonpath = ["src", "tests", "."]
addopts = "--strict-markers"
markers = [
    "slow: marks long-running regression tests",
    "benchmark: marks benchmark/stress tests",
]
filterwarnings = [
    "error::DeprecationWarning",
    "ignore:numpy\\.core.*is deprecated:DeprecationWarning",
    "ignore:.*oneOf.*[dD]eprecated.*:Warning",
    "default::UserWarning",
]
xfail_strict = true

[tool.coverage.run]
source = ["scpn_control"]

[tool.coverage.report]
fail_under = 93
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "raise NotImplementedError",
    "if.+HAS_TORCH",
    "if.+HAS_SC_NEUROCORE",
    "if.+HAS_JAX",
    "if.+HAS_NENGO",
    "if.+HAS_OPTUNA",
    "if.+HAS_MPL",
    "except ImportError",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E402",   # module-level import after try/except (conditional deps)
    "E501",   # line length handled by formatter
    "E741",   # ambiguous variable (physics code uses l, I, O)
    "I001",   # import sorting (enable once codebase is clean)
    "UP006", "UP012", "UP015", "UP031", "UP034", "UP035", "UP037", "UP045",
    "F841",   # unused variable (common in demo/experiment scripts)
    "SIM102", "SIM105", "SIM108", "SIM300",
    "B007", "B017", "B018", "B023", "B028", "B904", "B905",
]

[tool.ruff.lint.isort]
known-first-party = ["scpn_control"]

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = ["B101"]
