# SPDX-License-Identifier: AGPL-3.0-or-later
# Commercial license available
# © Concepts 1996–2026 Miroslav Šotek. All rights reserved.
# © Code 2020–2026 Miroslav Šotek. All rights reserved.
# ORCID: 0009-0009-3560-0851
# Contact: www.anulum.li | protoscience@anulum.li
# SCPN Control — Python project metadata.
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scpn-control"
version = "0.22.1"
description = "SCPN Control — Neuro-symbolic Stochastic Petri Net controller for plasma control"
authors = [
    {name = "Miroslav Sotek", email = "protoscience@anulum.li"},
]
keywords = ["tokamak", "plasma-control", "petri-net", "snn", "Kuramoto", "MHD", "gyrokinetic", "H-infinity", "mu-synthesis", "NMPC"]
license = {text = "AGPL-3.0-or-later"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Physics",
]
readme = "README.md"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "osqp>=0.6",
    "click>=8.0",
    "pydantic>=2.0",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/anulum/scpn-control"
Documentation = "https://anulum.github.io/scpn-control/"
Repository = "https://github.com/anulum/scpn-control"
"Bug Tracker" = "https://github.com/anulum/scpn-control/issues"
Discussions = "https://github.com/anulum/scpn-control/discussions"
Changelog = "https://github.com/anulum/scpn-control/blob/main/CHANGELOG.md"

[project.optional-dependencies]
viz = ["matplotlib>=3.5"]
dashboard = ["streamlit>=1.20", "matplotlib>=3.5"]
hdf5 = ["h5py>=3.0"]
ws = ["websockets>=12.0"]
formal = ["z3-solver>=4.12"]
ml = ["torch>=2.0"]
facility = ["mdsthin>=1.6.3"]
jax = ["jax>=0.4.20", "jaxlib>=0.4.20"]
neuro = ["sc-neurocore>=3.8.0"]
studio = ["scpn-studio-platform>=0.1,<0.9"]  # SCPN STUDIO vertical (scpn_control.studio)
nengo = []  # pure-numpy LIF+NEF engine, no external deps
loihi = []  # Loihi export deprecated; use export_fpga_weights()
rl = ["stable-baselines3>=2.0", "gymnasium>=0.29"]
tuning = ["optuna>=3.0"]  # Bayesian gain tuning (scpn_control.control.controller_tuning)
benchmark = ["freegs>=0.6"]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "pymdown-extensions>=10.0",
]
precommit = ["pre-commit>=4.0"]
all = [
    "matplotlib>=3.5",
    "streamlit>=1.20",
    "h5py>=3.0",
    "websockets>=12.0",
    "torch>=2.0",
    "mdsthin>=1.6.3",
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "stable-baselines3>=2.0",
    "gymnasium>=0.29",
    "optuna>=3.0",
    "freegs>=0.6",
    "z3-solver>=4.12",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "bandit>=1.7",
    "matplotlib>=3.5",
    "streamlit>=1.20",
    "torch>=2.0",
    "pre-commit>=4.0",
    "z3-solver>=4.12",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
scpn-control = "scpn_control.cli:main"
scpn-check-generated-traceability = "tools.check_generated_traceability:main"
scpn-evidence-gap-matrix = "tools.evidence_gap_matrix:main"
scpn-native-coverage-matrix = "tools.native_coverage_matrix:main"
scpn-validation-report-freshness = "tools.validation_report_freshness:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"scpn_control.scpn" = ["replay_schemas/*.json"]
"scpn_control.core" = ["solver.cpp", "solver_manifest.json"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = true
files = [
    "src/scpn_control/",
    "validation/",
]

# Third-party scientific packages that do not ship type information (no
# py.typed, no stubs on typeshed). Each is enumerated explicitly rather than
# relaxing import resolution globally, so a new untyped dependency surfaces as a
# review decision instead of being silently silenced. numpy, click and pydantic
# are intentionally absent: they ship py.typed and are checked strictly.
[[tool.mypy.overrides]]
module = [
    "scipy", "scipy.*",
    "osqp",
    "contourpy",
    "z3",
    "h5py",
    "websockets",
    "optuna",
    "casadi",
    "acados_template",
    "omas",
    "qualikiz_tools",
    "torax",
]
ignore_missing_imports = true

# JAX and torch are optional, guarded dependencies that are not installed in the
# authoritative type-check environment, so the gate already sees them as untyped.
# follow_imports = "skip" makes that explicit and consistent: it treats them as Any
# whether or not they happen to be installed locally, so the optional-dependency
# fallbacks (``jax = None``) and the untyped ``jax.config`` calls type-check
# identically in both configurations instead of only when the deps are absent.
# (no_implicit_reexport stays relaxed for jax.checkpoint-style implicit re-exports.)
[[tool.mypy.overrides]]
module = ["jax", "jax.*", "jaxlib", "torch", "torch.*", "matplotlib", "matplotlib.*"]
no_implicit_reexport = false
ignore_missing_imports = true
follow_imports = "skip"

# Optional heavy data-acquisition dependencies (FAIR-MAST level2 Zarr/S3 pull)
# that are NOT installed in the CI test-job type-check environment and ship no
# type stubs; the validation acquisition scripts import them lazily inside
# functions. The pre-commit mypy hook may resolve them from a fuller local venv,
# so this override keeps `python -m mypy` green in both environments. Extend the
# list when a newly un-ignored script imports another such optional dependency.
[[tool.mypy.overrides]]
module = ["fsspec", "xarray"]
ignore_missing_imports = true

# Optional native/sibling components imported behind guards: the Rust extension
# (built by maturin, absent in the type-check env), sibling GOTM repositories,
# and optional first-party integrations whose modules ship separately (imported
# under try/except ImportError with a None/flag fallback).
[[tool.mypy.overrides]]
module = [
    "scpn_control_rs",
    "sc_neurocore", "sc_neurocore.*",
    "scpn_control.io.imas_connector",
    "scpn_control.core.fusion_ignition_sim",
    "scpn_control.diagnostics.forward",
    "validation.psi_pointwise_rmse",
]
ignore_missing_imports = true

# JAX transforms (jax.jit, jax.checkpoint, …) are untyped, so decorating a
# function with them yields an untyped callable that trips
# disallow_untyped_decorators. The jnp-traced bodies are deliberately untyped
# (see the JAX typing convention); relax only the decorator check for the
# jax-traced modules.
[[tool.mypy.overrides]]
module = [
    "scpn_control.core.jax_solvers",
    "scpn_control.core.jax_neural_equilibrium",
    "scpn_control.core.jax_gs_solver",
    "scpn_control.control.jax_traceable_runtime",
]
disallow_untyped_decorators = false

# SYS-AUDIT-02-MYPY1 complete: all 127 validation/ modules are strict-checked (see
# [tool.mypy] files). The per-module ignore_errors burn-down list is gone — do not
# reintroduce it to silence new errors, fix them at source.

[tool.pytest.ini_options]
pythonpath = ["src", "tests", "."]
addopts = "--strict-markers"
markers = [
    "slow: marks long-running regression tests",
    "benchmark: marks benchmark/stress tests",
]
filterwarnings = [
    "error::DeprecationWarning",
    "ignore:numpy\\.core.*is deprecated:DeprecationWarning",
    "ignore:.*oneOf.*[dD]eprecated.*:Warning",
    "default::UserWarning",
]
xfail_strict = true

[tool.coverage.run]
source = ["scpn_control"]
branch = true

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if.+HAS_TORCH",
    "if.+HAS_SC_NEUROCORE",
    "if.+HAS_JAX",
    "if.+HAS_NENGO",
    "if.+HAS_OPTUNA",
    "if.+HAS_MPL",
    "except ImportError",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "D"]
ignore = [
    "E402",   # module-level import after try/except (conditional deps)
    "E501",   # line length handled by formatter
    "E741",   # ambiguous variable (physics code uses l, I, O)
    "UP006", "UP012", "UP015", "UP031", "UP034", "UP035", "UP037", "UP045",
    "SIM102", "SIM105", "SIM108", "SIM300",
    "B007", "B017", "B018", "B023", "B028", "B904", "B905",
    # Dunder-method (D105) and __init__ (D107) docstrings are deliberately not
    # required: the NumPy convention documents __init__ in the class docstring
    # and does not mandate docstrings on magic methods, so requiring them would
    # invite filler. This mirrors tools/run_docstring_gate.py, which excludes
    # the same two rules from its public-API docstring-coverage floor. D107 is
    # already relaxed by convention = "numpy"; it is pinned here for clarity.
    "D105", "D107",
]

# Enforce NumPy-style docstrings (SYS-AUDIT-02-RUFF3 / SYS-AUDIT-01-R001). The
# convention selects the D-rule subset (resolving the D203/D211 and D212/D213
# conflicts in favour of D211/D213) and relaxes the numpydoc-incompatible rules;
# run_docstring_gate.py continues to enforce the D101-D106 coverage floor.
[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["scpn_control"]

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = ["B101"]
