[workspace]
members = [
    "crates/control-types",
    "crates/control-math",
    "crates/control-core",
    "crates/control-control",
    "crates/control-python",
]
resolver = "2"

[workspace.package]
authors = ["Miroslav Sotek"]
license = "AGPL-3.0-or-later"
edition = "2021"

[workspace.dependencies]
ndarray = { version = "0.15", features = ["serde"] }
nalgebra = "0.33"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustfft = "6.2"
num-complex = "0.4"
approx = "0.5"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
rand_distr = "0.4"
pyo3 = { version = "0.24", features = ["extension-module"] }
numpy = "0.24"
ndarray-npy = "0.9.1"
ndarray-linalg = { version = "0.16", features = ["intel-mkl-static"] }
criterion = { version = "0.8" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
