# SPDX-License-Identifier: AGPL-3.0-or-later
# Commercial license available
# © Concepts 1996–2026 Miroslav Šotek. All rights reserved.
# © Code 2020–2026 Miroslav Šotek. All rights reserved.
# ORCID: 0009-0009-3560-0851
# Contact: www.anulum.li | protoscience@anulum.li
# SCPN Control — Rust control crate manifest

[package]
authors = ["Miroslav Sotek"]
license = "AGPL-3.0-or-later"
name = "control-control"
version = "0.1.0"
edition = "2021"
description = "SCPN Control - Control systems (PID, MPC, H-inf, SNN controller)"
repository = "https://github.com/anulum/scpn-control"
keywords = ["plasma", "tokamak", "control", "snn", "fusion"]
categories = ["science", "simulation"]

[dependencies]
control-types = { path = "../control-types" }
control-math = { path = "../control-math" }
control-core = { path = "../control-core" }
ndarray = { workspace = true }
ndarray-linalg = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
sha2 = "0.11"

[dev-dependencies]
criterion = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "bench_lif"
harness = false
path = "../../benches/bench_lif.rs"
