[package]
name = "control-core"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "SCPN Control - GS solver, transport, confinement scaling"
repository = "https://github.com/anulum/scpn-control"
authors = ["Miroslav Sotek"]
keywords = ["plasma", "tokamak", "control", "snn", "fusion"]
categories = ["science", "simulation"]

[features]
default = []

[dependencies]
control-types = { path = "../control-types" }
control-math = { path = "../control-math" }
ndarray = { workspace = true }
ndarray-linalg = { workspace = true }
pyo3 = { workspace = true }
rayon = { workspace = true }
log = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "bench_boris"
harness = false
path = "../../benches/bench_boris.rs"

[[bench]]
name = "bench_transport"
harness = false
path = "../../benches/bench_transport.rs"
