# SPDX-License-Identifier: AGPL-3.0-or-later
# Commercial license available
# © Concepts 1996–2026 Miroslav Šotek. All rights reserved.
# © Code 2020–2026 Miroslav Šotek. All rights reserved.
# ORCID: 0009-0009-3560-0851
# Contact: www.anulum.li | protoscience@anulum.li
# SCPN Control — PyO3 Control Crate Manifest

[package]
authors = ["Miroslav Sotek"]
license = "AGPL-3.0-or-later"
name = "scpn-control-rs"
version = "0.1.0"
edition = "2021"
description = "SCPN Control - Slim Python bindings via PyO3 (control-only)"
repository = "https://github.com/anulum/scpn-control"
keywords = ["plasma", "tokamak", "control", "snn", "fusion"]
categories = ["science", "simulation"]

[lib]
name = "scpn_control_rs"
crate-type = ["cdylib"]

[dependencies]
control-types = { path = "../control-types" }
control-math = { path = "../control-math" }
control-core = { path = "../control-core" }
control-control = { path = "../control-control" }
pyo3 = { workspace = true }
numpy = { workspace = true }
ndarray = { workspace = true }
rand = { workspace = true }
rand_chacha = "0.9"
socket2 = "0.5"
crossbeam-channel = "0.5"
core_affinity = "0.8"
z3 = "0.20"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.7", optional = true }

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]
io-uring = ["dep:io-uring"]
