[package]
authors = ["Miroslav Sotek"]
license = "AGPL-3.0-or-later"
name = "control-types"
version = "0.1.0"
edition = "2021"
description = "SCPN Control - Type definitions and configuration"
repository = "https://github.com/anulum/scpn-control"
keywords = ["plasma", "tokamak", "control", "snn", "fusion"]
categories = ["science", "simulation"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ndarray = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
